# pawapay-python-sdk

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-native.yml
example/: test_config.py  test_deposit.py  test_payment_page.py  test_payout.py  test_refund.py  test_transaction_status.py
src/: __init__.py  setup_cli.py
src/api/: ApiClient.py
src/config/: Config.py
src/core/: __init__.py  loader.py
src/utils/: __init__.py  failure_code_helper.py  helpers.py  validator.py
src/utils/license/: __init__.py  integrity.py  protection.py  server_check.py  validator.py
src/utils/vm/: __init__.py  bytecode_encoder.py  degradation_manager.py  interpreter.py
tests/: conftest.py
tests/integration/: test_connectivity.py  test_payment_flows.py
tests/unit/: test_config.py  test_integrity.py  test_protection.py
